--- a/index.html
+++ b/index.html
@@ -42,59 +42,39 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
-
-      <h1 class="logo mr-auto"><a href="index.html"><span>Com</span>pany</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
+      <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/logo_white.png" alt="TEDx BitsGoa" class="img-fluid"></a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
 
-          <li class="drop-down"><a href="">About</a>
+          <li class="drop-down"><a href="" class="nav-links">About</a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
             </ul>
           </li>
 
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="editions.html"  class="nav-links">Editions</a></li>
+          <li><a href="speakers.html" class="nav-links">Speakers</a></li>
+          <li><a href="talks.html" class="nav-links">Talks</a></li>
+          <li><a href="blog.html" class="nav-links">Blog</a></li>
+          <li><a href="photos.html" class="nav-links">Photos</a></li>
+          <li><a href="events.html" class="nav-links">Events</a></li>
+
 
         </ul>
-      </nav><!-- .nav-menu -->
-
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
-      </div>
+      </nav>
 
     </div>
-  </header><!-- End Header -->
+  </header>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
-
       <div class="carousel-inner" role="listbox">
-
         <!-- Slide 1 -->
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
+          <div id="overlay"></div>
           <div class="container">
             <div class="carousel-content animated fadeInUp">
               <h2>Welcome to <span>Company</span></h2>
@@ -105,7 +85,8 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
+        <!-- <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
+          <div id="overlay"></div>
           <div class="container">
             <div class="carousel-content animated fadeInUp">
               <h2>Lorem Ipsum Dolor</h2>
@@ -113,10 +94,11 @@
               <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
+        <!-- <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
+          <div id="overlay"></div>
           <div class="container">
             <div class="carousel-content animated fadeInUp">
               <h2>Sequi ea ut et est quaerat</h2>
@@ -124,7 +106,7 @@
               <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -137,9 +119,6 @@
         <span class="carousel-control-next-icon icofont-simple-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-
-      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-
     </div>
   </section><!-- End Hero -->
 
@@ -542,6 +521,20 @@
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
+  <script src="three.r95.min.js"></script>
+  <script src="vanta.waves.min.js"></script>
+  <script>
+  VANTA.WAVES({
+  el: "#banner",
+  mouseControls: true,
+  touchControls: true,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: 0x460909
+  })
+  </script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
