--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Company Bootstrap Template</title>
+  <title>About - TEDx BITSGoa</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
