--- a/photos.html
+++ b/photos.html
@@ -26,6 +26,10 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -99,39 +103,11 @@
             </ul>
           </div>
         </div>
-
-        <div class="row portfolio-container" data-aos="fade-up">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/TEDxpressions[DoPy] (30).jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Team Snap</h4>
-                <p>Nice Caption</p>
-                <a href="assets/img/TEDxpressions[DoPy] (30).jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <img src="assets/speakers/2.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>Speaker Snaps 12</h4>
-                    <p>Speaker Snaps</p>
-                    <a href="assets/speakers/2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                <img src="assets/speakers/20.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>TEDxpressions</h4>
-                    <p>Random</p>
-                    <a href="assets/speakers/20.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-              </div>
-  
-
+        <div class="row portfolio-container">
         </div>
-
+        <div style="text-align: center;">
+          <img src="./assets/img/loader.svg" class="loader" />
+        </div>
       </div>
     </section><!-- End Portfolio Section -->
 
@@ -178,6 +154,7 @@
   <script src="assets/vendor/aos/aos.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="assets/js/photos.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
