--- a/speakers.html
+++ b/speakers.html
@@ -28,6 +28,8 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
