Fixed Landing Page Header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +28,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -44,7 +46,8 @@
   <!-- ======= Header ======= -->
   <header id="header-home" class="fixed-top">
     <div class="container d-flex align-items-center">
-      <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa" class="img-fluid">BITSGoa</span></a>
+      <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
+          class="img-fluid">BITSGoa</span></a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html" style="color: #FF2B06; font-weight: 700;">Home</a></li>
@@ -56,7 +59,7 @@
             </ul>
           </li>
 
-          <li><a href="editions.html"  class="nav-links">Editions</a></li>
+          <li><a href="editions.html" class="nav-links">Editions</a></li>
           <li><a href="speakers.html" class="nav-links">Speakers</a></li>
           <li><a href="talks.html" class="nav-links">Talks</a></li>
           <li><a href="blog.html" class="nav-links">Blog</a></li>
@@ -71,26 +74,37 @@
   </header>
 
   <!-- ======= Hero Section ======= -->
-  
+
   <section id="hero">
-    <div class="waveWrapper waveAnimation sp-container">
-      <h2 class="frame-5 middleText">
-        <span>IDEAS</span>
-        <span>WORTH</span>
-        <span>SPREADING</span>
+    <div class="waveWrapper waveAnimation">
+      <div class="frame-5 middleText">
+        <div>
+          <span><img src="./assets/img/tedx.png" class="banner-image"><span class="banner-text">BITSGoa</span></span>
+        </div>
+        <div style="margin-bottom: 50px; margin-top: -20px;">
+          <span class="red">x = </span><span class="tagline">independently organized event</span>
+        </div>
         <br />
-        <span><img src="./assets/img/tedx.png" class="banner-image"><span class="banner-text">BITSGoa</span></span>
+        <div class="sub-heading">
+          <span>IDEAS</span>
+          <span>WORTH</span>
+          <span>SPREADING</span>
+        </div>
         <br />
+
         <span><button class="btn fifth" id="explore">Explore now ▼</button></span>
-      </h2>
-            <div class="waveWrapperInner bgTop">
-        <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+      </div>
+      <div class="waveWrapperInner bgTop">
+        <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')">
+        </div>
       </div>
       <div class="waveWrapperInner bgMiddle">
-        <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+        <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')">
+        </div>
       </div>
       <div class="waveWrapperInner bgBottom">
-        <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+        <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')">
+        </div>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -112,12 +126,16 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
             <p>
-              TEDx brings the spirit of TED’s mission of ideas worth spreading to local communities around the globe. TEDx events are organised independently under a free license granted by TED and include live speakers and recorded TED talks.
+              TEDx brings the spirit of TED’s mission of ideas worth spreading to local communities around the globe.
+              TEDx events are organised independently under a free license granted by TED and include live speakers and
+              recorded TED talks.
               Our event is called TEDxBITSGoa, where x = independently organized TED event.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> An exclusive team of undergraduates from BITS Pilani KK Birla Goa Campus.</li>
-              <li><i class="ri-check-double-line"></i> Featured people such as Kiran Bedi, Kalki Koechlin, Clinton Cerejo, Sonam Wangchuk, Sumeet Vyas and many others.</li>
+              <li><i class="ri-check-double-line"></i> An exclusive team of undergraduates from BITS Pilani KK Birla Goa
+                Campus.</li>
+              <li><i class="ri-check-double-line"></i> Featured people such as Kiran Bedi, Kalki Koechlin, Clinton
+                Cerejo, Sonam Wangchuk, Sumeet Vyas and many others.</li>
             </ul>
           </div>
         </div>
@@ -161,32 +179,35 @@
         <div class="row portfolio-container" data-aos="fade-up">
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/TEDxpressions[DoPy] (30).jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Team Snap</h4>
-                <p>Nice Caption</p>
-                <a href="./assets/img/TEDxpressions[DoPy] (30).jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+            <div class="portfolio-info">
+              <h4>Team Snap</h4>
+              <p>Nice Caption</p>
+              <a href="./assets/img/TEDxpressions[DoPy] (30).jpg" data-gall="portfolioGallery"
+                class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <img src="./assets/img/2.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>Speaker Snaps 12</h4>
-                    <p>Speaker Snaps</p>
-                    <a href="assets/img/2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                <img src="./assets/img/1.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>TEDxpressions</h4>
-                    <p>Random</p>
-                    <a href="./assets/img/1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-                  
-              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="./assets/img/2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Speaker Snaps 12</h4>
+              <p>Speaker Snaps</p>
+              <a href="assets/img/2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i
+                  class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="./assets/img/1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TEDxpressions</h4>
+              <p>Random</p>
+              <a href="./assets/img/1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i
+                  class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+
+          </div>
         </div>
         <button class="btn-red" style="margin: auto">View All</button>
       </div>
@@ -238,16 +259,16 @@
   <script src="three.r95.min.js"></script>
   <script src="vanta.waves.min.js"></script>
   <script>
-  VANTA.WAVES({
-  el: "#banner",
-  mouseControls: true,
-  touchControls: true,
-  minHeight: 200.00,
-  minWidth: 200.00,
-  scale: 1.00,
-  scaleMobile: 1.00,
-  color: 0x460909
-  })
+    VANTA.WAVES({
+      el: "#banner",
+      mouseControls: true,
+      touchControls: true,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x460909
+    })
   </script>
 
   <!-- Template Main JS File -->
