--- a/blog-single.html
+++ b/blog-single.html
@@ -94,14 +94,14 @@
     <section id="blog" class="blog">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 entries" id="blog-content">
+          <div class="col-lg-12 entries" id="blog-content-single">
+
+            <!-- End blog entry -->
           </div>
-          <!-- End blog entries list -->
-          <!-- End blog sidebar -->
         </div>
-      </div>
     </section>
     <!-- End Blog Section -->
+
   </main>
   <!-- End #main -->
 
@@ -148,7 +148,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/blog.js"></script>
+  <script src="assets/js/blog-single.js"></script>
 </body>
 
 </html>
