--- a/photos.html
+++ b/photos.html
@@ -103,7 +103,7 @@
             </ul>
           </div>
         </div>
-        <div class="row portfolio-container">
+        <div class="row portfolio-container port-cards">
         </div>
         <div style="text-align: center;">
           <img src="./assets/img/loader.svg" class="loader" />
