--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Photos Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
 
@@ -176,7 +176,7 @@
           </div>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up">
+        <div class="row portfolio-container port-cards" data-aos="fade-up">
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/TEDxpressions[DoPy] (30).jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
