Created Talks, Editions, Speakers

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       </div>
     </section><!-- End About Us Section -->
 
+
     <!-- ======= Speakers Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
@@ -150,64 +151,37 @@
         <div class="section-title">
           <h2>Featured Speakers</strong></h2>
         </div>
-
+        <div style="text-align: center;">
+          <img src="./assets/img/loader.svg" class="loader" />
+        </div>
         <div class="row rowHome">
         </div>
 
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Photos Section ======= -->
+
     <section id="portfolio" class="portfolio">
+      <div class="container">
+        <div style="text-align: center; height: 30vw; min-height: 250px;" data-aos="fade-up">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A0Fk9kofOUs" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </section>
+
+    <!-- ======= Photos Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Photos</strong></h2>
         </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Speaker Snaps</li>
-              <li data-filter=".filter-card">Team Snaps</li>
-              <li data-filter=".filter-web">TEDxpressions</li>
-            </ul>
-          </div>
+        <div style="text-align: center;">
+          <img src="./assets/img/loader.svg" class="loader" />
         </div>
-
-        <div class="row portfolio-container port-cards" data-aos="fade-up">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/TEDxpressions[DoPy] (30).jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Team Snap</h4>
-              <p>Nice Caption</p>
-              <a href="./assets/img/TEDxpressions[DoPy] (30).jpg" data-gall="portfolioGallery"
-                class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="./assets/img/2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Speaker Snaps 12</h4>
-              <p>Speaker Snaps</p>
-              <a href="assets/img/2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i
-                  class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="./assets/img/1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>TEDxpressions</h4>
-              <p>Random</p>
-              <a href="./assets/img/1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i
-                  class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-
-          </div>
+        <div class="row portfolio-container-home port-cards" data-aos="fade-up">
+          <!-- Photos -->
         </div>
         <button class="btn-red" style="margin: auto">View All</button>
       </div>
@@ -274,6 +248,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/data.js"></script>
+  <script src="assets/js/photos.js"></script>
 
 </body>
 
