--- a/editions.html
+++ b/editions.html
@@ -2,36 +2,38 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-  <title>Team - TEDx BITSGoa</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>Editions - TEDx BITSGoa</title>
+  <meta content="" name="descriptison" />
+  <meta content="" name="keywords" />
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" />
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+    rel="stylesheet" />
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet" />
 
   <!-- =======================================================
   * Template Name: Company - v2.0.0
@@ -42,7 +44,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
@@ -72,48 +73,42 @@
 
     </div>
   </header>
+  <!-- End Header -->
 
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Speakers</h2>
+          <h2>Editions</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Speakers</li>
+            <li>Editions</li>
           </ol>
         </div>
-
       </div>
-    </section><!-- End Breadcrumbs -->
+    </section>
+    <!-- End Breadcrumbs -->
 
-    <!-- ======= Our Speakers Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container" style="min-height: 65vh;">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2><strong>Speakers</strong></h2>
-          <p>Every year, we host speakers from various walks of life, who mesmerize the audience with their life
-            stories and ideas worth sharing, staying true to what TED stands for. From famous celebrities to prominent
-            names in the corporate sector to jaw-dropping performances to this list never ending (because ideas and
-            talents
-            know no boundaries), our annual conference is a culmination of various ingredients.
-          </p>
+    <!-- ======= Blog Section ======= -->
+    <section id="blog" class="blog">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section-title" data-aos="fade-up">
+              <h2><strong>Editions</strong></h2>
+            </div>
+          </div>
         </div>
-
-        <div class="row row1">
-          <!-- this section will get card of speakers from main.js for this add data in main.js -->
-        </div>
-        <div style="text-align: center;">
-          <img src="./assets/img/loader.svg" class="loader" />
+        <div class="row">
+          <div class="col-lg-12 entries" id="editions-content">
+          </div>
         </div>
       </div>
-    </section><!-- End Our Team Section -->
-
-  </main><!-- End #main -->
+    </section>
+    <!-- End Blog Section -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -142,7 +137,6 @@
     </div>
   </footer><!-- End Footer -->
 
-
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
@@ -159,8 +153,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/data.js"></script>
-
+  <script src="assets/js/editions.js"></script>
 </body>
 
 </html>
