Created Talks, Editions, Speakers

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
           <div class="col-lg-6" data-aos="fade-right">
             <h2>one of India's oldest and biggest student run TEDx conference</h2>
             <h3>Having a legacy passed on for years, becoming bigger and better with each passing edition</h3>
-            <button class="btn-red">Read more</button>
+            <a href="./about.html">
+              <button class="btn-red">Read more</button>
+            </a>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
             <p>
@@ -180,7 +182,7 @@
         <div style="text-align: center;">
           <img src="./assets/img/loader.svg" class="loader" />
         </div>
-        <div class="row portfolio-container-home port-cards" data-aos="fade-up">
+        <div class="row portfolio-container-home port-cards">
           <!-- Photos -->
         </div>
         <button class="btn-red" style="margin: auto">View All</button>
